--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.gms:play-services:11.0.1'
+
+    implementation "android.arch.persistence.room:runtime:2.2.5"
+    annotationProcessor "android.arch.persistence.room:compiler:2.2.5"
 }
