Saving to Room Db corrected and reading locations from room and loading to map working fine now, also implemented a feature to get the distance between start and stop locaions.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:2.2.5"
 
     implementation 'com.github.bumptech.glide:glide:4.0.0'
+
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
 }
